syntax = "proto3";

message ConnectionPacket {
  string meeting_id = 1;
}
